Seccion de blog creada y estilos aplicados

--- a/index.html
+++ b/index.html
@@ -31,6 +31,63 @@
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
     </header>
+
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de granos de café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Placeat sit nihil dolorem, optio alias eos minus fuga dicta tenetur 
+                        impedit laboriosam obcaecati hic labore suscipit tempore necessitatibus consectetur odio incidunt?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 deliciosas recetas de café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Placeat sit nihil dolorem, optio alias eos minus fuga dicta tenetur 
+                        impedit laboriosam obcaecati hic labore suscipit tempore necessitatibus consectetur odio incidunt?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Placeat sit nihil dolorem, optio alias eos minus fuga dicta tenetur 
+                        impedit laboriosam obcaecati hic labore suscipit tempore necessitatibus consectetur odio incidunt?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros cursos y talleres</h3>
+        </aside>
+    </div>
     
 </body>
 </html>
