--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
             </ul>
         </aside>
     </div>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra barra--footer">
+                <a href="index.html" class="logo">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
